# PyFEALiTE

./: CLAUDE.md
pyFEALiTE/: CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCEMENT_REPORT.md  EZDXF_INTEGRATION_SUMMARY.md  FINAL_ENHANCEMENT_REPORT.md  GIT_COMMIT_SUMMARY.md  INTEGRATION_SUCCESS_REPORT.md  INTERNAL_FORCES_COMPLETE_REPORT.md  INTERNAL_FORCES_PLOTTING.md  INTERNAL_FORCES_PLOTTING_COMPLETE.md  LICENSE  PERFECT_TEST_SUITE_INTERNAL_FORCES_REPORT.md  PLUGIN_ARCHITECTURE_PLAN.md  README.md  TESTING_REPORT_COMPREHENSIVE.md  TESTING_SUCCESS_REPORT.md  TEST_REPORT_SUMMARY.md  VISUALIZATION_GALLERY_REPORT.md  advanced_frame_analysis.py  complete_internal_forces_analysis.py  complete_pyfealite_test_suite.py  comprehensive_test_suite.py  corrected_final_test_suite.py  enhanced_structural_export.dxf  enhanced_structure_export.dxf  final_pyfealite_test_suite.py  fixed_comprehensive_test_suite.py  frame_analysis_example.py  integrated_steel_design.dxf  perfect_final_test_suite.py  perfect_test_suite_internal_forces.py  professional_steel_details.dxf  professional_structural_drawing.dxf  professional_structural_plan.dxf  professional_workflow_demo.py  pyproject.toml  real_pyfealite_test_suite.py  requirements.txt  steel_section_details.dxf  steel_section_library.dxf  (+7 more)
pyFEALiTE/.github/workflows/: ci.yml  release.yml
pyFEALiTE/TODOS/: PyNite_plugin_phase2.md
pyFEALiTE/demo_exports/: analysis_results.txt  frame_structure.json
pyFEALiTE/demo_exports/csv_data/: displacements_Dead_Load.csv  displacements_Live_Load.csv  displacements_Wind_Load.csv  elements.csv  materials.csv  nodes.csv  reactions_Wind_Load.csv
pyFEALiTE/docs/: README.md
pyFEALiTE/examples/: README.md  advanced_steel_design.py  aisc_sections_demo.py  basic_example.py  c_sharp_equivalent_example.py  complete_analysis_example.py  complete_dxf_integration.py  complete_readme_example.py  comprehensive_forces_test.py  corrected_analysis.py  detailed_internal_forces_plot.py  enhanced_dxf_export.py  enhanced_internal_forces_demo.py  exact_c_sharp_readme.py  frame_element_example.py  phase4_visualization_example.py  plugin_architecture_demo.py  pynite_3d_demo.py  quick_start_thai.py  readme_example.py  simple_internal_forces_test.py
pyFEALiTE/pyfealite/: __init__.py
pyFEALiTE/pyfealite/plugins/pynite/: __init__.py  adapter.py  converters.py
pyFEALiTE/scripts/: setup_dev_env.py  test_plugin_framework.py
pyFEALiTE/src/pyfealite/: __init__.py
pyFEALiTE/src/pyfealite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyFEALiTE/src/pyfealite/analysis/: __init__.py  post_processor.py  results.py
pyFEALiTE/src/pyfealite/core/: __init__.py  base.py  element.py  enums.py  node.py  spring_element.py  structure.py  structure_enhanced.py
pyFEALiTE/src/pyfealite/export/: __init__.py  dxf_exporter.py  enhanced_dxf_exporter.py
pyFEALiTE/src/pyfealite/loads/: __init__.py  base.py  distributed_load.py  load_case.py  load_combination.py  point_load.py  support_displacement.py
pyFEALiTE/src/pyfealite/materials/: __init__.py  base.py  isotropic.py
pyFEALiTE/src/pyfealite/plugins/: __init__.py  base.py  core_plugin.py  registry.py
pyFEALiTE/src/pyfealite/plugins/pynite/: converters.py
pyFEALiTE/src/pyfealite/sections/: __init__.py  aisc_section.py  base.py  circular.py  generic_2d.py  hollow_tube.py  ipe_section.py  rectangular.py  steel_design.py
pyFEALiTE/src/pyfealite/utils/: __init__.py  benchmarks.py  combinations.py  export.py
pyFEALiTE/src/pyfealite/visualization/: __init__.py  plotter.py  results_plot.py  structure_plot.py
pyFEALiTE/tests/: run_single_test.py  test_materials_base.py
pyFEALiTE/tests/test_core/: test_node.py
pyFEALiTE/tests/test_materials/: __init__.py  test_isotropic.py
pyFEALiTE/tests/test_plugins/: __init__.py  test_plugin_system.py  test_pynite_adapter_internal_forces.py  test_pynite_converters.py  test_pynite_integration.py  test_pynite_plugin.py
pyFEALiTE/tests/test_sections/: __init__.py  test_rectangular.py
src/pyfealite/plugins/pynite/: adapter.py
