[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfealite"
version = "1.0.0"
description = "Professional Python Finite Element Analysis Library for 2D Structures with Advanced Visualization"
authors = [
    {name = "PyFEALiTE Team", email = "buildsmart888@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
homepage = "https://github.com/buildsmart888/PyFEALiTE"
repository = "https://github.com/buildsmart888/PyFEALiTE"
documentation = "https://buildsmart888.github.io/PyFEALiTE"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]
keywords = [
    "finite-element",
    "structural-analysis",
    "engineering",
    "fem",
    "2d-frame",
    "beam-analysis",
    "visualization",
    "professional",
    "civil-engineering"
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "ezdxf>=1.0.0",
    "steelpy>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "mypy>=0.910",
    "flake8>=3.9.0",
    "pre-commit>=2.15.0",
]
visualization = [
    "streamlit>=1.0.0",
    "plotly>=5.0.0",
    "ezdxf>=0.16.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/pyfealite/pyfealite"
Documentation = "https://pyfealite.readthedocs.io"
Repository = "https://github.com/pyfealite/pyfealite"
Issues = "https://github.com/pyfealite/pyfealite/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true